# drf_tutorial

./: db.sqlite3  pyproject.toml
snippets/: serializers.py  urls.py  views.py
snippets/migrations/: 0001_initial.py
tutorial/: settings.py  urls.py
